{
  "version": 4,
  "terraform_version": "1.4.1",
  "serial": 301,
  "lineage": "6468dbdb-06e4-8b65-b0cc-7f101da10258",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "livebus-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117522125273:internet-gateway/igw-0e4f99178d019a6c1",
            "id": "igw-0e4f99178d019a6c1",
            "owner_id": "117522125273",
            "tags": {
              "Name": "livebus-igw"
            },
            "tags_all": {
              "Name": "livebus-igw"
            },
            "vpc_id": "vpc-03ee4e0cbcc914bf0"
          },
          "dependencies": [
            "module.network.aws_vpc.livebus-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "livebus-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117522125273:route-table/rtb-0bf4fc59284f2eba3",
            "id": "rtb-0bf4fc59284f2eba3",
            "owner_id": "117522125273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4f99178d019a6c1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03ee4e0cbcc914bf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.livebus-igw",
            "module.network.aws_vpc.livebus-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "livebus-public-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc913feb11cee296",
            "route_table_id": "rtb-0bf4fc59284f2eba3",
            "subnet_id": "subnet-01d8b45d14cf74641"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.livebus-igw",
            "module.network.aws_route_table.livebus-public-route-table",
            "module.network.aws_subnet.livebus-public-rds-subnet",
            "module.network.aws_vpc.livebus-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "livebus-public-route-table-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0032c9cfe4cd8313f",
            "route_table_id": "rtb-0bf4fc59284f2eba3",
            "subnet_id": "subnet-0e0b9eb85acffed7c"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.livebus-igw",
            "module.network.aws_route_table.livebus-public-route-table",
            "module.network.aws_subnet.livebus-public-rds-subnet-2",
            "module.network.aws_vpc.livebus-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "livebus-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117522125273:security-group/sg-0d020ed3d4fa72210",
            "description": "Allow RDS access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d020ed3d4fa72210",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "livebus-rds-sg",
            "name_prefix": "",
            "owner_id": "117522125273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "livebus-rds-sg"
            },
            "tags_all": {
              "Name": "livebus-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ee4e0cbcc914bf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.livebus-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "livebus-public-rds-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117522125273:subnet/subnet-01d8b45d14cf74641",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d8b45d14cf74641",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "117522125273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "livebus-public-rds-subnet"
            },
            "tags_all": {
              "Name": "livebus-public-rds-subnet"
            },
            "vpc_id": "vpc-03ee4e0cbcc914bf0"
          },
          "dependencies": [
            "module.network.aws_vpc.livebus-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "livebus-public-rds-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117522125273:subnet/subnet-0e0b9eb85acffed7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0b9eb85acffed7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "117522125273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "livebus-public-rds-subnet"
            },
            "tags_all": {
              "Name": "livebus-public-rds-subnet"
            },
            "vpc_id": "vpc-03ee4e0cbcc914bf0"
          },
          "dependencies": [
            "module.network.aws_vpc.livebus-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "livebus-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117522125273:vpc/vpc-03ee4e0cbcc914bf0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06267dfc5f3d88392",
            "default_route_table_id": "rtb-028c35698e1d693f9",
            "default_security_group_id": "sg-05ef06bdf8ce2c8f1",
            "dhcp_options_id": "dopt-0e833a3d375db5048",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03ee4e0cbcc914bf0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-028c35698e1d693f9",
            "owner_id": "117522125273",
            "tags": {
              "Name": "livebus-vpc"
            },
            "tags_all": {
              "Name": "livebus-vpc"
            }
          }
        }
      ]
    }
  ]
}